# thin-ocamlscript

./: .gitignore  .ocamlformat  README.md  dune-project  main.ml  thin-ocamlscript.opam
examples/: exists  factorial.ml  hello.ml  revised.ml
lib/: dune  script.ml
